offlocker/css/main.css
/* ... */
  .modal-message .modal-dialog .modal-content .modal-header {
    text-align: center;
    display: block;
    border-bottom: none;
    padding-top: 50px;
    padding-bottom: 50px; }
    .modal-message .modal-dialog .modal-content .modal-header .close {
      position: absolute;
      right: -15px;
      top: -15px;
      padding: 0px;
      color: #fff;
      opacity: 1;
      cursor: pointer; }
    .modal-message .modal-dialog .modal-content .modal-header h2 {
      display: block;
      text-align: center;
      color: grey;
      padding-bottom: 10px;
      font-family: "Roboto", sans-serif; }
    .modal-message .modal-dialog .modal-content .modal-header p {
      display: block; }

/* End Contact Success and error Area css
============================================================================================ */
.footer-area {
  padding-top: 100px;
  background-color: #222222; }
  .footer-area h6 {
    color: #fff;
    margin-bottom: 25px;
    font-size: 18px;
    font-weight: 600; }
    @media (max-width: 767px) {
      .footer-area h6 {
        margin-bottom: 15px; } }

.copy-right-text i,
.copy-right-text a {
  color: grey; }

.instafeed {
  margin: -5px; }
  .instafeed li {
    overflow: hidden;
    width: 25%; }
    .instafeed li img {
      margin: 5px; }

.footer-social a {
  padding-right: 25px;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s; }
  .footer-social a:hover i {
    color: grey; }

.footer-social i {
  color: #cccccc;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s; }

@media (max-width: 991px) {
  .single-footer-widget {
    margin-bottom: 40px; } }

.single-footer-widget .form-inline {
  display: inline-block;
  width: 100%; }

.single-footer-widget input {
  border: none;
  width: 80% !important;
  font-weight: 300;
  background: #fff;
  color: #777;
  padding-left: 20px;
  border-radius: 0;
  font-size: 14px; }
  .single-footer-widget input:focus {
    outline: none;
    box-shadow: none; }
  .single-footer-widget input.placeholder {
    color: #ccc; }
  .single-footer-widget input:-moz-placeholder {
    color: #ccc; }
  .single-footer-widget input::-moz-placeholder {
    color: #ccc; }
  .single-footer-widget input::-webkit-input-placeholder {
    color: #ccc; }

.single-footer-widget .bb-btn {
  color: #fff;
  font-weight: 300;
  border-radius: 0;
  z-index: 9999;
  cursor: pointer; }

.single-footer-widget .info {
  position: absolute;
  margin-top: 5%;
  color: #fff;
  font-size: 12px; }
  .single-footer-widget .info.valid {
    color: green; }
  .single-footer-widget .info.error {
    color: red; }

.single-footer-widget .click-btn {
  color: #fff;
  border-radius: 0;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  padding: 6px 12px;
  border: 0; }
  .single-footer-widget .click-btn:focus {
    outline: none;
    box-shadow: none; }

.single-footer-widget ::-moz-selection {
  /* Code for Firefox */
  background-color: #191919 !important;
  color: #777777; }

.single-footer-widget ::selection {
  background-color: #191919 !important;
  color: #777777; }

.single-footer-widget ::-webkit-input-placeholder {
  /* WebKit, Blink, Edge */
  color: #777777;
  font-weight: 300; }

.single-footer-widget :-moz-placeholder {
  /* Mozilla Firefox 4 to 18 */
  color: #777777;
  opacity: 1;
  font-weight: 300; }

.single-footer-widget ::-moz-placeholder {
  /* Mozilla Firefox 19+ */
  color: #777777;
  opacity: 1;
  font-weight: 300; }

.single-footer-widget :-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: #777777;
  font-weight: 300; }

.single-footer-widget ::-ms-input-placeholder {
  /* Microsoft Edge */
  color: #777777;
  font-weight: 300; }

.footer-text {
  padding-top: 80px; }
  @media (max-width: 991px) {
    .footer-text {
      padding-top: 40px; } }
  .footer-text a,
  .footer-text i {
    color: grey; }

.whatsapp-floating-logo {
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 9999; }
  .whatsapp-floating-logo img {
    height: 70px;
    width: 70px; }

.navbar-brand {
  font-size: 50px;
  font-style: italic;
  font-weight: bold;
  color: #E94D49 !important;
  background-color: black;
  padding: 20px; }
  .navbar-brand span {
    font-weight: normal; }

.distinctive-img {
  position: fixed;
  bottom: 20px;
  left: 20px; }
  .distinctive-img img {
    width: 130px;
    opacity: 0.8; }

@media (max-width: 991px) {
  .navbar-brand {
    font-size: 35px;
    background-color: transparent;
    padding-left: 0;
    padding-right: 0;
    margin-right: 0; }
  .navbar-light .navbar-toggler {
    border-color: #fff;
    position: absolute;
    left: 15px;
    top: 15px; }
    .navbar-light .navbar-toggler .icon-bar {
      background: #fff !important; }
  .navbar-expand-lg .container {
    justify-content: center; }
  footer::after {
    display: none; }
  .banner-area::after {
    display: none; }
  .distinctive-img {
    display: none; } }

html {
  overflow-x: hidden; }

footer {
  position: relative;
  margin-top: 100px; }
  footer::after {
    position: absolute;
    height: 122px;
    width: 111%;
    content: "";
    top: -55px;
    z-index: -1;
    transform: rotate(-3deg);
    right: -27px;
    background: #222222; }

